backend/src/snapshots/agent_zero_backend__tests__snapshot_redfin_3662_oak_st.snap
---
source: src/main.rs
expression: property
---
{
  "id": 0,
  "redfin_url": "https://www.redfin.ca/bc/vancouver/3662-Oak-St-V6H-2M2/home/155902332",
  "realtor_url": null,
  "rew_url": null,
  "zillow_url": null,
  "title": "3662 Oak St, Vancouver - 5 beds/4 baths",
  "description": "Beautiful, renovated family home on a prime corner STEPS TO DOUGLAS PARK. Main route offers convenience while the home is remarkably quiet from dbl glazed windows &amp; lush front hedging for privacy. Large E facing windows fill the interior w/natural light. Main floor offers formal living &amp; dining rooms plus separate den ideal for home office,or playroom. A bright kitchen w/ eating area &amp; NS mnt views. Upstairs,3 spacious bdrms, one w/a generous balcony perfect for morning coffee watching the sunrise. Lower level has exceptionally high ceilings w/a bright 2 bdrm suite w/separate entry, large windows &amp; gas fp. Great accommodation for extended family or mortgage helper. 2 oversized single garages for vehicles &amp; storage, or the flexibility to create a workshop. Emily Carr &amp; Eric Hamber catchment ",
  "price": 2298000,
  "price_currency": "USD",
  "offer_price": null,
  "street_address": "3662 Oak St",
  "city": "Vancouver",
  "region": "BC",
  "postal_code": "V6H 2M2",
  "country": "CA",
  "bedrooms": 5,
  "bathrooms": 4,
  "sqft": 2718,
  "year_built": 1921,
  "lat": 49.2530055,
  "lon": -123.1270233,
  "images": [
    {
      "id": 0,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_3.jpg",
      "created_at": ""
    },
    {
      "id": 1,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_1_3.jpg",
      "created_at": ""
    },
    {
      "id": 2,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_2_3.jpg",
      "created_at": ""
    },
    {
      "id": 3,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_3_3.jpg",
      "created_at": ""
    },
    {
      "id": 4,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_4_3.jpg",
      "created_at": ""
    },
    {
      "id": 5,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_5_3.jpg",
      "created_at": ""
    },
    {
      "id": 6,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_6_3.jpg",
      "created_at": ""
    },
    {
      "id": 7,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_7_3.jpg",
      "created_at": ""
    },
    {
      "id": 8,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_8_3.jpg",
      "created_at": ""
    },
    {
      "id": 9,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_9_3.jpg",
      "created_at": ""
    },
    {
      "id": 10,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_10_3.jpg",
      "created_at": ""
    },
    {
      "id": 11,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_11_3.jpg",
      "created_at": ""
    },
    {
      "id": 12,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_12_3.jpg",
      "created_at": ""
    },
    {
      "id": 13,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_13_3.jpg",
      "created_at": ""
    },
    {
      "id": 14,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_14_3.jpg",
      "created_at": ""
    },
    {
      "id": 15,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_15_3.jpg",
      "created_at": ""
    },
    {
      "id": 16,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_16_3.jpg",
      "created_at": ""
    },
    {
      "id": 17,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_17_3.jpg",
      "created_at": ""
    },
    {
      "id": 18,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_18_3.jpg",
      "created_at": ""
    },
    {
      "id": 19,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_19_3.jpg",
      "created_at": ""
    },
    {
      "id": 20,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_20_3.jpg",
      "created_at": ""
    },
    {
      "id": 21,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_21_3.jpg",
      "created_at": ""
    },
    {
      "id": 22,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_22_3.jpg",
      "created_at": ""
    },
    {
      "id": 23,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_23_3.jpg",
      "created_at": ""
    },
    {
      "id": 24,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_24_3.jpg",
      "created_at": ""
    },
    {
      "id": 25,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_25_3.jpg",
      "created_at": ""
    },
    {
      "id": 26,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_26_3.jpg",
      "created_at": ""
    },
    {
      "id": 27,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_27_3.jpg",
      "created_at": ""
    },
    {
      "id": 28,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_28_3.jpg",
      "created_at": ""
    },
    {
      "id": 29,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_29_3.jpg",
      "created_at": ""
    },
    {
      "id": 30,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_30_3.jpg",
      "created_at": ""
    },
    {
      "id": 31,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_31_3.jpg",
      "created_at": ""
    },
    {
      "id": 32,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_32_3.jpg",
      "created_at": ""
    },
    {
      "id": 33,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_33_3.jpg",
      "created_at": ""
    },
    {
      "id": 34,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_34_3.jpg",
      "created_at": ""
    },
    {
      "id": 35,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_35_2.jpg",
      "created_at": ""
    },
    {
      "id": 36,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/619/R3089619_36_1.jpg",
      "created_at": ""
    }
  ],
  "created_at": "",
  "updated_at": null,
  "notes": null,
  "parking_garage": 2,
  "parking_covered": null,
  "parking_open": null,
  "land_sqft": null,
  "property_tax": null,
  "skytrain_station": null,
  "skytrain_walk_min": null,
  "radiant_floor_heating": null,
  "ac": null,
  "down_payment_pct": null,
  "mortgage_interest_rate": null,
  "amortization_years": null,
  "mortgage_monthly": null,
  "hoa_monthly": null,
  "monthly_total": null,
  "monthly_cost": null,
  "has_rental_suite": null,
  "rental_income": null,
  "status": null,
  "nickname": null,
  "school_elementary": null,
  "school_elementary_rating": null,
  "school_middle": null,
  "school_middle_rating": null,
  "school_secondary": null,
  "school_secondary_rating": null
}
