backend/src/snapshots/agent_zero_backend__tests__snapshot_rew_788_w8th_unit_l01.snap
---
source: src/main.rs
expression: property
---
{
  "id": 0,
  "redfin_url": null,
  "realtor_url": null,
  "rew_url": "https://www.rew.ca/properties/l01-788-w-8th-avenue-vancouver-bc",
  "zillow_url": null,
  "title": "For Sale: L01-788 W 8th Avenue, Vancouver, BC",
  "description": "Browse 23 photos of this Townhouse in Fairview, Vancouver listed for $1,249,900. This property features 3 beds, 4 baths and is 1560 Sqft. MLS® # R3086230",
  "price": 1249900,
  "price_currency": "CAD",
  "offer_price": null,
  "street_address": "L01-788 W 8th Avenue",
  "city": "Fairview",
  "region": "BC",
  "postal_code": "V5Z 1E1",
  "country": "Canada",
  "bedrooms": 3,
  "bathrooms": 3,
  "sqft": null,
  "year_built": 1991,
  "lat": 49.2642384857,
  "lon": -123.1214674577,
  "images": [],
  "created_at": "",
  "updated_at": null,
  "notes": null,
  "parking_garage": 2,
  "parking_covered": null,
  "parking_open": null,
  "land_sqft": null,
  "property_tax": 4762,
  "skytrain_station": null,
  "skytrain_walk_min": null,
  "radiant_floor_heating": null,
  "ac": null,
  "down_payment_pct": null,
  "mortgage_interest_rate": null,
  "amortization_years": null,
  "mortgage_monthly": null,
  "hoa_monthly": 1137,
  "monthly_total": null,
  "monthly_cost": null,
  "has_rental_suite": null,
  "rental_income": null,
  "status": null,
  "nickname": null,
  "school_elementary": null,
  "school_elementary_rating": null,
  "school_middle": null,
  "school_middle_rating": null,
  "school_secondary": null,
  "school_secondary_rating": null
}
